# SudokuSolver

./: .gitignore  README.md  board_converter.py  pyproject.toml  run.py
sudokusolver/: main.py  sudokuboard.py
sudokusolver/logic/: backtrack.py  simple_logic.py
sudokusolver/models/: sudoku_board.py  sudoku_cell.py
sudokusolver/sudoku_board/: sudokuboard.py  sudokucell.py
sudokusolver/sudoku_logic/: simplelogic.py
tests/: test_fast_boards.py  test_slow_boards.py  test_sudoku_cell.py
