[project]
name = "sudokusolver"
version = "0.1.0"
description = "Command-line Sudoku solver using constraint propagation and backtracking search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: full-dataset tests, requires tests/data/sudoku.csv"
]
addopts = "-m 'not slow'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]

[project.scripts]
sudokusolver = "sudokusolver.main:main"
